--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="profile">
         <img class="prof" src="images/alee.png" alt="profile">
         <h2><strong>Hello.</strong></h2>
-        <p class="intro">I am ALi, a  web developer and programmer.</p>
+        <p class="intro">I am Liyakat ALi, a  web developer and programmer.</p>
       </div>
       <hr>
       <div class="skills">
@@ -31,7 +31,7 @@
         <div class="skill-row">
           <img class="comp" src="images/computer.png" alt="image">
           <h3>Web Design and Development.</h3>
-          <p>I am a web Developer. I love to design and develop websites. I use HTML, CSS and JavaScript as Front-End tools for designing websites.</p>
+          <p>I am a web Developer. I love to design and develop websites. I use HTML, CSS,BOOTSTRAP and JavaScript as Front-End tools for designing websites.</p>
         </div>
         <div class="skill-row">
           <img class="prog" src="images/progm.jpeg" alt="">
