--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="profile">
         <img class="prof" src="images/alee.png" alt="profile">
         <h2><strong>Hello.</strong></h2>
-        <p class="intro">I am Liyakat ALi, a  web developer and programmer.</p>
+        <p class="intro">I am Liyakat Ali, a  web developer and programmer.</p>
       </div>
       <hr>
       <div class="skills">
